Kernel/Parser/KernelParser.java
// Generated from Kernel.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KernelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		KEYWORD=10, STRING=11, UintegerBin=12, UintegerOct=13, UintegerDec=14, 
		UintegerHex=15, PrefixBin=16, PrefixOct=17, PrefixDec=18, PrefixHex=19, 
		Decimal=20, Sign=21, Suffix=22, SYMBOL=23, WS=24;
	public static final int
		RULE_file = 0, RULE_expression = 1, RULE_atom = 2, RULE_pair = 3, RULE_number = 4, 
		RULE_numBin = 5, RULE_numOct = 6, RULE_numDec = 7, RULE_numHex = 8, RULE_complexBin = 9, 
		RULE_complexOct = 10, RULE_complexDec = 11, RULE_complexHex = 12, RULE_realBin = 13, 
		RULE_realOct = 14, RULE_realDec = 15, RULE_realHex = 16, RULE_imagBin = 17, 
		RULE_imagOct = 18, RULE_imagDec = 19, RULE_imagHex = 20, RULE_urealBin = 21, 
		RULE_urealOct = 22, RULE_urealDec = 23, RULE_urealHex = 24;
	public static final String[] ruleNames = {
		"file", "expression", "atom", "pair", "number", "numBin", "numOct", "numDec", 
		"numHex", "complexBin", "complexOct", "complexDec", "complexHex", "realBin", 
		"realOct", "realDec", "realHex", "imagBin", "imagOct", "imagDec", "imagHex", 
		"urealBin", "urealOct", "urealDec", "urealHex"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "'.'", "')'", "'+'", "'-'", "'@'", "'i'", "'I'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, "KEYWORD", 
		"STRING", "UintegerBin", "UintegerOct", "UintegerDec", "UintegerHex", 
		"PrefixBin", "PrefixOct", "PrefixDec", "PrefixHex", "Decimal", "Sign", 
		"Suffix", "SYMBOL", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Kernel.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KernelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				expression();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__4) | (1L << KEYWORD) | (1L << STRING) | (1L << UintegerDec) | (1L << PrefixBin) | (1L << PrefixOct) | (1L << PrefixDec) | (1L << PrefixHex) | (1L << Decimal) | (1L << Sign) | (1L << SYMBOL))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public PairContext pair() {
			return getRuleContext(PairContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
			case T__4:
			case KEYWORD:
			case STRING:
			case UintegerDec:
			case PrefixBin:
			case PrefixOct:
			case PrefixDec:
			case PrefixHex:
			case Decimal:
			case Sign:
			case SYMBOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				atom();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				pair();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class KeywordContext extends AtomContext {
		public TerminalNode KEYWORD() { return getToken(KernelParser.KEYWORD, 0); }
		public KeywordContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterKeyword(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitKeyword(this);
		}
	}
	public static class SymbolContext extends AtomContext {
		public TerminalNode SYMBOL() { return getToken(KernelParser.SYMBOL, 0); }
		public SymbolContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterSymbol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitSymbol(this);
		}
	}
	public static class StringContext extends AtomContext {
		public TerminalNode STRING() { return getToken(KernelParser.STRING, 0); }
		public StringContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitString(this);
		}
	}
	public static class NumberLiteralContext extends AtomContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public NumberLiteralContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterNumberLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitNumberLiteral(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atom);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYWORD:
				_localctx = new KeywordContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				match(KEYWORD);
				}
				break;
			case STRING:
				_localctx = new StringContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(STRING);
				}
				break;
			case T__3:
			case T__4:
			case UintegerDec:
			case PrefixBin:
			case PrefixOct:
			case PrefixDec:
			case PrefixHex:
			case Decimal:
			case Sign:
				_localctx = new NumberLiteralContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				number();
				}
				break;
			case SYMBOL:
				_localctx = new SymbolContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(62);
				match(SYMBOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairContext extends ParserRuleContext {
		public Token dot;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitPair(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pair);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(T__0);
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				expression();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__4) | (1L << KEYWORD) | (1L << STRING) | (1L << UintegerDec) | (1L << PrefixBin) | (1L << PrefixOct) | (1L << PrefixDec) | (1L << PrefixHex) | (1L << Decimal) | (1L << Sign) | (1L << SYMBOL))) != 0) );
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(71);
				((PairContext)_localctx).dot = match(T__1);
				setState(72);
				expression();
				}
			}

			setState(75);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public NumBinContext numBin() {
			return getRuleContext(NumBinContext.class,0);
		}
		public NumOctContext numOct() {
			return getRuleContext(NumOctContext.class,0);
		}
		public NumDecContext numDec() {
			return getRuleContext(NumDecContext.class,0);
		}
		public NumHexContext numHex() {
			return getRuleContext(NumHexContext.class,0);
		}
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_number);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PrefixBin:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				numBin();
				}
				break;
			case PrefixOct:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				numOct();
				}
				break;
			case T__3:
			case T__4:
			case UintegerDec:
			case PrefixDec:
			case Decimal:
			case Sign:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				numDec();
				}
				break;
			case PrefixHex:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				numHex();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumBinContext extends ParserRuleContext {
		public TerminalNode PrefixBin() { return getToken(KernelParser.PrefixBin, 0); }
		public ComplexBinContext complexBin() {
			return getRuleContext(ComplexBinContext.class,0);
		}
		public NumBinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numBin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterNumBin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitNumBin(this);
		}
	}

	public final NumBinContext numBin() throws RecognitionException {
		NumBinContext _localctx = new NumBinContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_numBin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(PrefixBin);
			setState(84);
			complexBin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumOctContext extends ParserRuleContext {
		public TerminalNode PrefixOct() { return getToken(KernelParser.PrefixOct, 0); }
		public ComplexOctContext complexOct() {
			return getRuleContext(ComplexOctContext.class,0);
		}
		public NumOctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numOct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterNumOct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitNumOct(this);
		}
	}

	public final NumOctContext numOct() throws RecognitionException {
		NumOctContext _localctx = new NumOctContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numOct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(PrefixOct);
			setState(87);
			complexOct();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumDecContext extends ParserRuleContext {
		public ComplexDecContext complexDec() {
			return getRuleContext(ComplexDecContext.class,0);
		}
		public TerminalNode PrefixDec() { return getToken(KernelParser.PrefixDec, 0); }
		public NumDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterNumDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitNumDec(this);
		}
	}

	public final NumDecContext numDec() throws RecognitionException {
		NumDecContext _localctx = new NumDecContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_numDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PrefixDec) {
				{
				setState(89);
				match(PrefixDec);
				}
			}

			setState(92);
			complexDec();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumHexContext extends ParserRuleContext {
		public TerminalNode PrefixHex() { return getToken(KernelParser.PrefixHex, 0); }
		public ComplexHexContext complexHex() {
			return getRuleContext(ComplexHexContext.class,0);
		}
		public NumHexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numHex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterNumHex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitNumHex(this);
		}
	}

	public final NumHexContext numHex() throws RecognitionException {
		NumHexContext _localctx = new NumHexContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_numHex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(PrefixHex);
			setState(95);
			complexHex();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComplexBinContext extends ParserRuleContext {
		public ComplexBinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexBin; }
	 
		public ComplexBinContext() { }
		public void copyFrom(ComplexBinContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BinaryNumberContext extends ComplexBinContext {
		public UrealBinContext urealBin() {
			return getRuleContext(UrealBinContext.class,0);
		}
		public BinaryNumberContext(ComplexBinContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterBinaryNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitBinaryNumber(this);
		}
	}
	public static class BinaryPolarContext extends ComplexBinContext {
		public List<RealBinContext> realBin() {
			return getRuleContexts(RealBinContext.class);
		}
		public RealBinContext realBin(int i) {
			return getRuleContext(RealBinContext.class,i);
		}
		public BinaryPolarContext(ComplexBinContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterBinaryPolar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitBinaryPolar(this);
		}
	}
	public static class BinaryComplexContext extends ComplexBinContext {
		public RealBinContext realBin() {
			return getRuleContext(RealBinContext.class,0);
		}
		public ImagBinContext imagBin() {
			return getRuleContext(ImagBinContext.class,0);
		}
		public BinaryComplexContext(ComplexBinContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterBinaryComplex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitBinaryComplex(this);
		}
	}

	public final ComplexBinContext complexBin() throws RecognitionException {
		ComplexBinContext _localctx = new ComplexBinContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_complexBin);
		int _la;
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new BinaryNumberContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3 || _la==T__4) {
					{
					setState(97);
					_la = _input.LA(1);
					if ( !(_la==T__3 || _la==T__4) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(100);
				urealBin();
				}
				break;
			case 2:
				_localctx = new BinaryPolarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				realBin();
				setState(102);
				match(T__5);
				setState(103);
				realBin();
				}
				break;
			case 3:
				_localctx = new BinaryComplexContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				realBin();
				setState(106);
				_la = _input.LA(1);
				if ( !(_la==T__3 || _la==T__4) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(107);
				imagBin();
				}
				break;
			case 4:
				_localctx = new BinaryComplexContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				_la = _input.LA(1);
				if ( !(_la==T__3 || _la==T__4) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(110);
				imagBin();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComplexOctContext extends ParserRuleContext {
		public ComplexOctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexOct; }
	 
		public ComplexOctContext() { }
		public void copyFrom(ComplexOctContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OctalComplexContext extends ComplexOctContext {
		public RealOctContext realOct() {
			return getRuleContext(RealOctContext.class,0);
		}
		public ImagOctContext imagOct() {
			return getRuleContext(ImagOctContext.class,0);
		}
		public OctalComplexContext(ComplexOctContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterOctalComplex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitOctalComplex(this);
		}
	}
	public static class OtalPolarContext extends ComplexOctContext {
		public List<RealOctContext> realOct() {
			return getRuleContexts(RealOctContext.class);
		}
		public RealOctContext realOct(int i) {
			return getRuleContext(RealOctContext.class,i);
		}
		public OtalPolarContext(ComplexOctContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterOtalPolar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitOtalPolar(this);
		}
	}
	public static class OctalNumberContext extends ComplexOctContext {
		public UrealOctContext urealOct() {
			return getRuleContext(UrealOctContext.class,0);
		}
		public OctalNumberContext(ComplexOctContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).enterOctalNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KernelListener ) ((KernelListener)listener).exitOctalNumber(this);
		}
	}

	public final ComplexOctContext complexOct() throws RecognitionException {
		ComplexOctContext _localctx = new ComplexOctContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_complexOct);
		int _la;
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new OctalNumberContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3 || _la==T__4) {
					{
					setState(113);
					_la = _input.LA(1);
					if ( !(_la==T__3 || _la==T__4) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(116);
				urealOct();
				}
				break;
			case 2:
				_localctx = new OtalPolarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				realOct();
				setState(118);
				match(T__5);
				setState(119);
				realOct();
				}
				break;
			case 3:
				_localctx = new OctalComplexContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				realOct();
				setState(122);
				_la = _input.LA(1);
				if ( !(_la==T__3 || _la==T__4) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(123);
				imagOct();
				}
				break;
			case 4:
				_localctx = new OctalComplexContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				_la = _input.LA(1);
				if ( !(_la==T__3 || _la==T__4) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(126);
				imagOct();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
